https://savannah.nongnu.org/bugs/?24889

patch #6692: Print collection status in a machine-readable way
https://savannah.nongnu.org/patch/?6692

patch #6693: Some FatalError's don't have codes still
https://savannah.nongnu.org/patch/?6693

patch #6694: Log exceptions
https://savannah.nongnu.org/patch/?6694

patch #6695: Log filenames
https://savannah.nongnu.org/patch/?6695


New in v0.5.03 (2008/11/17)
---------------------------
bug #24731: Documentation error: "if... if" in remove-older-than paragraph
https://savannah.nongnu.org/bugs/?24731

bug #24775: Digest Auth for WebDAV backend
https://savannah.nongnu.org/bugs/?24775

patch #6676: Raw delta stats aren't right for multivolumes
https://savannah.nongnu.org/patch/?6676

patch #6675: Add modelines
https://savannah.nongnu.org/patch/?6675

patch #6674: Add --log-* options to man page
https://savannah.nongnu.org/patch/?6674

patch #6673: Add --dry-run option
https://savannah.nongnu.org/patch/?6673

patch #6672: makedist doesn't ship util.py
https://savannah.nongnu.org/patch/?6672

patch #6670: Machine Readable Output
https://savannah.nongnu.org/patch/?6670

patch #6662: improve s3 backend error reporting
https://savannah.nongnu.org/patch/?6662

patch #6652: improve asynch scheduler (including the synchronous case)
https://savannah.nongnu.org/patch/?6652

patch #6642: make ParsedUrl() thread-safe with respect to itself
https://savannah.nongnu.org/patch/?6642

patch #6638: correct typo in reporting lack of sufficiently new boto backend
https://savannah.nongnu.org/patch/?6638

sr #106496: put install-from-cvs-notes in CVS-README
https://savannah.nongnu.org/support/?106496

sr #106534: GMail backups aren't stored in the correct location
https://savannah.nongnu.org/support/?106534


New in v0.5.02 (2008/09/21)
---------------------------
- Add -h option for help

- Change gpg logging so that logs are always collected.
The log is printed in the case of gpg IO errors.  Also,